# ROS2-PROJECT-SPRING2026

./: CMakeLists.txt  README.md  ov_slam_yolo_ros_2_jazzy_embedded_install_guide_amended.md  package.xml
include/: camera_visualizer.hpp  ros_visualizer.hpp  visual_front_end.hpp
ov2slam_ros/: check_if_ros2.sh
ov2slam_ros/src/: ov2slam.cpp  ov2slam_node.cpp
src/: map_manager.cpp
src/ov2slam_ros/parameters_files/accurate/euroc/: euroc_stereo.yaml
src/yolo_msgs/: package.xml
src/yolo_msgs/msg/: Detection.msg
src/yolo_ros/yolo_ros/: controller_node.py  detector_node.py
yolo_msgs/: CMakeLists.txt
yolo_ros/: package.xml  setup.py
yolo_ros/yolo_ros/: camera_node.py
