<?xml version="1.0"?>
<package format="3">
  <name>yolo_ros</name>
  <version>0.0.0</version>
  <description>YOLO ROS2 nodes</description>
  <maintainer email="b00095536@aus.edu">ahmed</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>yolo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
